[package]
name = "example-actix_web-redis-with-deadpool"
version = "0.1.0"
authors = ["round"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
deadpool-redis = { version = "0.6", features = ["config"] }
config-crate = { package = "config", version = "0.10.1"}
serde = "*"
dotenv = "*"
thiserror = "*"